[tool.poetry]
name = "mutant_validator"
version = "0.1.0"
description = "Validates if a person's DNA is of a mutant"
authors = ["Agustín Cignetti <cignettiagustin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"
fastapi = "^0.60.1"
uvicorn = "^0.11.7"
databases = {extras = ["mysql", "sqlite"], version = "^0.3.2"}
aiomysql = "0.0.20"
mysqlclient = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^5.2.0"
flake8 = "^3.8.3"
mypy = "^0.782"
pynvim = "^0.4.1"
jedi = "^0.17.2"
pdbpp = "^0.10.2"
requests = "^2.24.0"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
